upgrade angular and npm

--- a/FiddleSticksFiberArts/src/app/app.component.html
+++ b/FiddleSticksFiberArts/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="center image">
-    <img class="fiddlesticks-image" src="/assets/logo.jpg" alt="image">
+    <img class="fiddlesticks-image" src="logo.jpg" alt="image">
   </div>
   <div class="center">
     <h1>Fiddlesticks coming soon!</h1>
-    <p>For information please contact <a [href]="this.emailString">info@fiddlesticksfiberarts.com</a></p>
+    <p>For information please contact <a [href]="this.emailString">info&#64;fiddlesticksfiberarts.com</a></p>
   </div>
 </div>
