--- a/FiddleSticksFiberArts/src/app/features/mobile/mobile.component.html
+++ b/FiddleSticksFiberArts/src/app/features/mobile/mobile.component.html
@@ -5,5 +5,6 @@
   <div class="center">
     <h1>Fiddlesticks coming soon!</h1>
     <p>For information please contact <a [href]="this.emailString">info&#64;fiddlesticksfiberarts.com</a></p>
+    <p>You are using a mobile device.</p>
   </div>
 </div>
