--- a/FiddleSticksFiberArts/src/app/features/mobile/mobile.component.html
+++ b/FiddleSticksFiberArts/src/app/features/mobile/mobile.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-  <div class="center image">
+  <div class="center image-container">
     <img class="fiddlesticks-image" src="logo.jpg" alt="image">
   </div>
   <div class="center">
